--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "assemblyai": "^4.9.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
