--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "assemblyai": "^4.9.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "multer": "^1.4.5-lts.1"
