--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "nodemon": "^3.1.9",
@@ -22,6 +23,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "docx": "^9.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
