--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start:dev": "nodemon src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/crypto-js": "^4.2.2",
-    "@types/express": "^5.0.0",
-    "@types/multer": "^1.4.12",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
-  },
-  "dependencies": {
-    "assemblyai": "^4.9.0",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "docx": "^9.2.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "multer": "^1.4.5-lts.1"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"start:dev": "tsnd --respawn --clear src/app.ts",
+		"build": "rimraf ./dist && tsc",
+		"start": "npm run build && node dist/app.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/crypto-js": "^4.2.2",
+		"@types/express": "^5.0.0",
+		"@types/multer": "^1.4.12",
+		"@types/node": "^22.14.1",
+		"nodemon": "^3.1.9",
+		"rimraf": "^6.0.1",
+		"ts-node": "^10.9.2",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"assemblyai": "^4.9.0",
+		"colors": "^1.4.0",
+		"cors": "^2.8.5",
+		"crypto-js": "^4.2.0",
+		"docx": "^9.2.0",
+		"dotenv": "^16.5.0",
+		"env-var": "^7.5.0",
+		"express": "^4.21.2",
+		"express-validator": "^7.2.1",
+		"firebase": "^11.6.0",
+		"multer": "^1.4.5-lts.1"
+	}
 }
