--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.49.4",
 		"assemblyai": "^4.9.0",
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
@@ -33,7 +34,6 @@
 		"env-var": "^7.5.0",
 		"express": "^4.21.2",
 		"express-validator": "^7.2.1",
-		"firebase": "^11.6.0",
 		"multer": "^1.4.5-lts.1"
 	}
 }
